# libdict

./: Makefile.am  configure.ac
libdict/: Makefile.am  dict.c  dict.h
src/: Makefile.am  main.c
test/: Makefile.am  minunit.h  test-dict.c
